Modernize equals/hashCode, charset safety, Locale.ROOT, and String.formatted()
Replace verbose hashCode boilerplate (prime * result) with Objects.hash() across
36 files, simplify equals() null-guard patterns with Objects.equals(), remove
redundant checkAnnotations/checkParameters helper methods that duplicate
List.equals() semantics. Add explicit charset to getBytes()/new String() calls,
use Locale.ROOT for locale-insensitive operations, and use String.formatted().

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>